--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="card-title">Permutations without repetitions</p>
         <p class="card-description">Homework from Mr. Falcon</p>
     </a>
-    <a class="card-container" href="https://k0s4.github.io">
+    <a class="card-container" href="https://k0s4.github.io/TilesGame">
       <p class="card-title">Tiles game</p>
       <p class="card-description">Alpha 1.0</p>
     </a>
