--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </a>
       <a class="card-container" href="https://github.com/k0s4">
         <p class="card-title">My github</p>
-        <p class="card-description">Check my projects</p>
+        <p class="card-description">Check out my projects</p>
       </a>
       <a class="card-container" href="https://ktorajestgodzina.tk">
         <p class="card-title">Która jest godzina?</p>
