added spaces on left and right

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header class="header">
       <a class="title" href="https://k0s4.github.io">K0S4.github.io</a>
     </header>
-    <main class="main">
+    <main>
+      <div class="main">
       <a class="card-container" href="https://k0s4.github.io/randomNumber.html">
         <p class="card-title">Random Number Generator</p>
         <p class="card-description">
@@ -24,18 +25,21 @@
           Calculates number of days betwen two given dates
         </p>
       </a>
-      <a class="card-container" href="https://k0s4.github.io/passwordChecker.html">
+      <a
+        class="card-container"
+        href="https://k0s4.github.io/passwordChecker.html"
+      >
         <p class="card-title">Password Checker</p>
         <p class="card-description">How strong is your password?</p>
       </a>
       <a class="card-container" href="https://k0s4.github.io/wariacje">
         <p class="card-title">Permutations without repetitions</p>
         <p class="card-description">Homework from Mr. Falcon</p>
-    </a>
-    <a class="card-container" href="https://k0s4.github.io/TilesGame">
-      <p class="card-title">Tiles game</p>
-      <p class="card-description">Alpha 1.0</p>
-    </a>
+      </a>
+      <a class="card-container" href="https://k0s4.github.io/TilesGame">
+        <p class="card-title">Tiles game</p>
+        <p class="card-description">Alpha 1.0</p>
+      </a>
       <a class="card-container" href="https://github.com/k0s4">
         <p class="card-title">My github</p>
         <p class="card-description">Check out my projects</p>
@@ -48,6 +52,7 @@
         <p class="card-title">Coming soon</p>
         <p class="card-description">work in progress</p>
       </a>
+    </div>
     </main>
   </body>
 </html>
