--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
       <div class="main">
-      <a class="card-container" href="https://k0s4.github.io/random-number-generator/">
+      <a class="card-container" href="https://k0s4.github.io/randomNumber.html">
         <p class="card-title">Random Number Generator</p>
         <p class="card-description">
           Generates a random number from given range
@@ -27,7 +27,7 @@
       </a>
       <a
         class="card-container"
-        href="https://k0s4.github.io/passwordChecker.html"
+        href="https://k0s4.github.io/random-number-generator/"
       >
         <p class="card-title">Password Checker</p>
         <p class="card-description">How strong is your password?</p>
