fixed link again

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </a>
       <a
         class="card-container"
-        href="https://k0s4.github.io/random-number-generator/"
+        href="https://k0s4.github.io/password-checker/"
       >
         <p class="card-title">Password Checker</p>
         <p class="card-description">How strong is your password?</p>
