linked random number generator

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <div class="main">
-      <a class="card-container" href="https://k0s4.github.io/randomNumber.html">
+      <a class="card-container" href="https://k0s4.github.io/random-number-generator/">
         <p class="card-title">Random Number Generator</p>
         <p class="card-description">
           Generates a random number from given range
